--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ember-cli": "~4.1.1",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
+    "ember-cli-cors": "^0.0.2",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
